--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- <script src="./js/EjercicioIntermedio1.js"></script>
     <script src="./js/EjercicioIntermedio2.js"></script>
+    <script src="./js/EjercicioIntermedio3.js"></script>
+    <script src="./js/EjercicioIntermedio4.js"></script>
+    <script src="./js/EjercicioIntermedio5.js"></script>
+    <script src="./js/EjercicioIntermedio6.js"></script>
+    <script src="./js/EjercicioIntermedio7.js"></script>
+    <script src="./js/EjercicioIntermedio8.js"></script>
+    <script src="./js/EjercicioIntermedio9.js"></script>-->
 </body>
 </html>
