agregue mas scripts

--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <script src="./js/EjercicioIntermedio1.js"></script>
+    <script src="./js/Ejercicio1.js"></script>
+    <script src="./js/Ejercicio2.js"></script>
+    <script src="./js/Ejercicio3.js"></script>
+    <script src="./js/Ejercicio4.js"></script>
+    <script src="./js/Ejercicio5.js"></script>
+    <script src="./js/Ejercicio6.js"></script>
+    <script src="./js/Ejercicio7.js"></script>
+    <script src="./js/Ejercicio8.js"></script>
+    <script src="./js/Ejercicio9.js"></script>
+    <script src="./js/Ejercicio10.js"></script>
+    <script src="./js/EjercicioIntermedio1.js"></script>
     <script src="./js/EjercicioIntermedio2.js"></script>
     <script src="./js/EjercicioIntermedio3.js"></script>
     <script src="./js/EjercicioIntermedio4.js"></script>
@@ -14,6 +24,41 @@
     <script src="./js/EjercicioIntermedio6.js"></script>
     <script src="./js/EjercicioIntermedio7.js"></script>
     <script src="./js/EjercicioIntermedio8.js"></script>
-    <script src="./js/EjercicioIntermedio9.js"></script>-->
+    <script src="./js/EjercicioIntermedio9.js"></script>
+    <script src="./js/EjercicioIntermedio10.js"></script>
+    <script src="./js/EjercicioAvanzado1.js"></script>
+    <script src="./js/EjercicioAvanzado2.js"></script>
+    <script src="./js/EjercicioAvanzado3.js"></script>
+    <script src="./js/EjercicioAvanzado4.js"></script>
+    <script src="./js/EjercicioAvanzado5.js"></script>
+    <script src="./js/EjercicioAvanzado6.js"></script>
+    <script src="./js/EjercicioAvanzado7.js"></script>
+    <script src="./js/EjercicioAvanzado8.js"></script>
+    <script src="./js/EjercicioAvanzado9.js"></script>
+    <script src="./js/EjercicioAvanzado10.js"></script>
+    <!-- On branch main
+Your branch is up to date with 'origin/main'.
+Changes not staged for commit:
+  (use "git add <file>..." to update what will be committed)
+        modified:   index.html
+
+no changes added to commit (use "git add" and/or "git commit -a")
+PS C:\Users\Toño\Desktop\Arrays> git add -A
+PS C:\Users\Toño\Desktop\Arrays> git commit -m "Comente scripts"
+[main bbb0b4a] Comente scripts
+ 1 file changed, 8 insertions(+)
+PS C:\Users\Toño\Desktop\Arrays> git push main origin
+error: src refspec origin does not match any
+error: failed to push some refs to 'main'
+PS C:\Users\Toño\Desktop\Arrays> git push origin main
+Enumerating objects: 5, done.
+Counting objects: 100% (5/5), done.
+Delta compression using up to 4 threads
+Compressing objects: 100% (3/3), done.
+Writing objects: 100% (3/3), 548 bytes | 274.00 KiB/s, done.
+Total 3 (delta 0), reused 0 (delta 0), pack-reused 0 (from 0)
+To https://github.com/AngelBlack15/Ejercicios-Js-Arrays.git
+   ddd4823..bbb0b4a  main -> main
+PS C:\Users\Toño\Desktop\Arrays> -->
 </body>
 </html>
